app-blue/templates/app-blue/services/destination-rule.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1beta1
metadata:
  namespace: php
  name: php-service-blue
  labels:
    kiali_wizard: request_routing
  annotations: ~
spec:
  host: php-service-blue.php.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
  trafficPolicy: ~
